--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,6 +1,9 @@
 // RESET
 // Smooths out the rough edges across browsers
 @use './tools/normalize';
+@use 'node_modules/leaflet/dist/leaflet';
+@use 'node_modules/leaflet-minimap/src/Control.MiniMap';
+@use './map';
 
 // VARIABLES
 // Reusable settings
@@ -9,6 +12,7 @@
 
 // YOUR CODE
 // Starting writing your stuff below here
+
 div.graphics-container {
   display: flex;
   justify-content: space-between;
